--- a/platinum.html
+++ b/platinum.html
@@ -48,7 +48,7 @@ EJS_pathtodata = 'https://burritoedition.github.io/emu/data/';
 
 <!-- footer / Scripts -->
 
-<footer>&#169 Burrito Edition</footer>
+<footer>&#169 CoolMathLearning</footer>
 
 <script src="../js/slide_show.js"></script>
 <script src="../particles.js-master/particles.js"></script>
