--- a/platinum.html
+++ b/platinum.html
@@ -15,9 +15,7 @@
     <div class="particles-js" id="particles-js"></div>
 <!-- scripts -->
 
-<div class="topNav">
-  <a class="hvr-underline-from-center" href="../index.html">Home</a>
-  <a  class="hvr-underline-from-center"  href="../search.html">Search</a>
+
 </div>
 
 <div class="logo">
@@ -28,7 +26,7 @@
 
 <div class="game">
 
-    <div style="width:640px;height:480px;max-width:100%">
+    <div style="width:100%px;height:100%px;max-width:100%">
         <div id="game"></div>
       </div>
 <script type="text/javascript">
