--- a/platinum.html
+++ b/platinum.html
@@ -26,7 +26,7 @@
 
 <div class="game">
 
-    <div style="width:100%px;height:100%px;max-width:100%">
+    <div style="width:100%px;height:480px;max-width:100%">
         <div id="game"></div>
       </div>
 <script type="text/javascript">
